# sdl_project

./: README.md  environment.yml
LLM/llama/data/data_gen/: data_format_json.py  lan_xdl_gen.py  parquet_phaser.py  tool_data_gen.py  tool_move.py  xdl_gen.py
LLM/llama/data/env_pip/: llm_requirements.txt  sdl_requirements.txt
LLM/llama/result/xdl_llm/: procedure_20260119_175434.xml
LLM/llama/script/tool_llm/: eval.py  train.py
LLM/llama/script/tool_selector_action_reasoner/: eval.py  tool_llm.py  train.py
LLM/llama/script/xdl_llm/: eval.py  train.py  validator.py
TAMP/cuTAMP/: LICENSE  README.md  pyproject.toml
TAMP/cuTAMP/cuTAMP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
TAMP/cuTAMP/curobo/: pyproject.toml
TAMP/cuTAMP/cutamp/: __init__.py  algorithm.py  config.py  constraint_checker.py  cost_function.py  cost_reduction.py  costs.py  experiment_logger.py  motion_solver.py  optimize_plan.py  particle_initialization.py  rollout.py  samplers.py  tamp_domain.py  tamp_world.py
TAMP/cuTAMP/cutamp/envs/: __init__.py  pouring.py  stirring.py  utils.py
TAMP/cuTAMP/cutamp/robots/: __init__.py  (+7 more)
TAMP/tamp/: CMakeLists.txt  package.xml
TAMP/tamp/content/assets/apriltag/: apriltag_0.usd  apriltag_1.usd  apriltag_2.usd  apriltag_3.usd
TAMP/tamp/content/assets/lab/: Tray.usd  beaker.usd  cylinder.usd  flask.usd  heat_device.usd  magnet.usd  test_tube_rack.usd  tscale.usd
TAMP/tamp/content/assets/lab/bottle/: FluidBottle.usd
TAMP/tamp/content/assets/lab/stirrer/: HeatingPlate.usd
TAMP/tamp/content/assets/lab/stirrer/Materials/: mdl_0000.mdl  mdl_0005.mdl  mdl_0006.mdl  mdl_0007.mdl  mdl_0008.mdl  mdl_0009.mdl  mdl_0010.mdl  mdl_0011.mdl  mdl_0012.mdl  mdl_0013.mdl  mdl_0014.mdl  mdl_0015.mdl  mdl_0016.mdl  mdl_0017.mdl  mdl_0018.mdl  mdl_0019.mdl  mdl_0020.mdl  mdl_0021.mdl  mdl_0022.mdl  mdl_0023.mdl  mdl_0024.mdl  mdl_0025.mdl  mdl_0026.mdl  mdl_0027.mdl  mdl_0028.mdl  mdl_0029.mdl  mdl_0030.mdl  mdl_0031.mdl  mdl_0032.mdl  mdl_0033.mdl
TAMP/tamp/content/assets/robot/dcp_description/: CMakeLists.txt  package.xml
TAMP/tamp/content/assets/robot/dcp_description/config/fr5/: fr5.xrdf  fr5.yml
TAMP/tamp/content/assets/robot/dcp_description/config/fr5_ag95/: fr5_ag95.xrdf  fr5_ag95.yml
TAMP/tamp/content/assets/robot/dcp_description/meshes/gripper/ag95/: base_link.STL  crank_Link.STL  distal_phalanx_Link.STL  proximal_phalanx_Link.STL  rod_Link.STL
TAMP/tamp/content/assets/robot/dcp_description/urdf/gripper/: ag95.urdf  dh3.urdf  vgc10.urdf
TAMP/tamp/content/assets/robot/dcp_description/urdf/robot/: fr5.urdf  fr5_ag95.urdf  fr5_dh3.urdf  fr5_vgc10.urdf
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5/: fr5.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5/configuration/: fr5_physics.usd  fr5_robot.usd  fr5_sensor.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_ag95/: fr5_ag95.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_ag95/configuration/: fr5_ag95_physics.usd  fr5_ag95_robot.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_dh3/: fr5_dh3.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_dh3/configuration/: fr5_dh3_physics.usd  fr5_dh3_robot.usd  fr5_dh3_sensor.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_vgc10/: fr5_vgc10.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/fr5_vgc10/configuration/: fr5_vgc10_physics.usd  fr5_vgc10_robot.usd  fr5_vgc10_sensor.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/: 2f85.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/ag95/: ag95.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/ag95/configuration/: ag95_base.usd  ag95_physics.usd  ag95_robot.usd  ag95_sensor.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/dh3/: dh3.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/dh3/configuration/: dh3_physics.usd  dh3_robot.usd  dh3_sensor.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/vgc10/: vgc10.usd
TAMP/tamp/content/assets/robot/dcp_description/usd/gripper_visual/vgc10/configuration/: vgc10_base.usd  vgc10_physics.usd  vgc10_robot.usd  vgc10_sensor.usd
TAMP/tamp/content/configs/robot/spheres/: fr5.yml  fr5_ag95.yml  fr5_dh3.yml  fr5_vgc10.yml
TAMP/tamp/content/configs/xdl/: tool_map.yml  xdl.xml
TAMP/tamp/scripts/client/: tamp_client.py
TAMP/tamp/scripts/server/: tamp_server.py
TAMP/tamp/scripts/xdl/: tamp_xdl_parser.py  tamp_xdl_phaser.py
TAMP/tamp/src/envs/: default.py  moving.py  pouring.py  rearranging.py  stirring.py  utils.py
TAMP/tamp_interfaces/: CMakeLists.txt  package.xml
TAMP/tamp_interfaces/msg/: PlanStep.msg
TAMP/tamp_interfaces/srv/: Execute.srv  GetRobotInfo.srv  GetToolInfo.srv  MoveToTarget.srv  MoveToTargetJs.srv  Plan.srv  SetTampCfg.srv  SetTampEnv.srv  ToolChange.srv
isaacsim/: CMakeLists.txt
isaacsim/launch/: run_isaacsim.launch.py
isaacsim/scripts/: run_isaacsim.py
isaacsim/scripts/standalone/: datagen.py  datasetgen_backup.py  fr5.py  gripper.py  simulation.py  task.py  task_camera.py  task_camera_backup.py  test.py
perception/apriltag_ros/: CMakeLists copy.txt  CMakeLists.txt
perception/apriltag_ros/cfg/: tags_36h11.yaml
perception/apriltag_ros/include/apriltag_ros/: AprilTagNode.hpp
perception/apriltag_ros/launch/: apriltag.launch.py
perception/apriltag_ros/src/: AprilTagNode.cpp  pose_estimation.cpp
perception/perception_interfaces/: CMakeLists.txt  package.xml
perception/perception_interfaces/action/: Gripper.action  ToolChanger.action
perception/perception_interfaces/srv/: GetFtData.srv  GetObjectInfo.srv
perception/perception_manager/: CMakeLists.txt  package.xml
perception/perception_manager/config/: object_configs.yaml
perception/perception_manager/include/perception_manager/: perception_manager.hpp
perception/perception_manager/launch/: perception_manager.launch.py
perception/perception_manager/python/: client.py
perception/perception_manager/src/: perception_manager.cpp
(+97 files in other folders)
